webservers/zrwio.yaml
apiVersion: v1
kind: Service
metadata:
  name: zrwio-webserver
  labels:
    k8s-app: zrwio-webserver
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: zrwio-webserver
